# TTAS

./: .gitignore  README.md  main.py  pyproject.toml
code/: README.md  analyze_triage_features.py  explore_data.py  feature_analysis_report.txt  log.txt  preprocess.py
code/data_explore/: README.md  _validation.py  data_explore.ipynb  main.py  model_init.py  model_predict.py
code/data_explore/test_file/: data.csv  out.json  test.json  val_data.csv
code/data_explore/utilities/: chunk_list.py  chunk_list.txt  data_explore.ipynb  get_patient_info.py  save2json.py  test_retrieval_quality.py  valdata_gen.py  verify_model_predict.py
code/data_explore/utilities/chunks/: __init__.py  chunks_list_A01_A13_non_trauma.py  chunks_list_E01_environment.py  chunks_list_P01_P13_pediatric.py  (+1 more)
code/llms/: README.md  main.py  model_init.py  predict.py  test_stage1.py
code/model/: all_models_evaluation.txt  evaluation_report.txt  inspect_model.py  inspect_model_features.py  train_model.py  tune_model_optuna.py
code/model/CatBoost/: evaluation_report.txt
code/model/HistGradientBoosting/: evaluation_report.txt
code/model/LightGBM/: evaluation_report.txt
code/model/VotingEnsemble/: evaluation_report.txt
code/model/XGBoost/: evaluation_report.txt
code/utilities/: ensure_nan.py  split_data.py
data/0128/: processed_data.csv  processed_data_nan.csv  train_data.csv  train_data_nan.csv  val_data.csv  val_data_nan.csv
data/0128/檢傷訓練資料/: 檢傷訓練資料.xls
docs/: .~lock.ppt_0109_王維.pptx#  detail.txt  msg_Karen_Linecatch.txt  ppt_0109_王維.pptx
docs/檢傷分類基準(1)/: CAREFUL.txt
