[project]
name = "ttas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "catboost>=1.2.8",
    "chromadb>=1.4.1",
    "lightgbm>=4.6.0",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "transformers>=5.0.0",
    "xgboost>=3.1.3",
]
